5.Bug- Formatei os textos da tabela no centro com text-align

--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -59,6 +59,7 @@ text-decoration: none !important;
 
 .botao-amarelo:hover {
     background-color: #c44f00;
+    cursor: pointer;
 }
 
 .container {
@@ -113,6 +114,7 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
 }
 
 td button {
@@ -140,7 +142,9 @@ td button {
 }
 
 #back-button:hover {
-    background-color: #635a3d
+    background-color: #635a3d;
+    cursor: pointer;
+    
 }
 
 div.espaco{
